@@ -45,6 +45,9 @@ struct {
     unsigned int version;
     StringView notes;
 } constexpr version_notes[] = { {
+        0,
+        "» kak_* appearing in shell arguments will be added to the environment\n"
+    }, {
         20240518,
         "» Fix tests failing on some platforms\n"
     }, {
